@@ -2,6 +2,8 @@ CHANGES IN FLTK 1.1.7
 
 	- Documentation fixes (STR #648, STR #692, STR #730, STR
 	  #744, STR #745)
+	- The FLTK string functions are now compiled in on all
+	  systems (STR #774)
 	- Fixed symbol demo label bug (STR #777)
 	- Fixed position of menu titles (STR #795)
 	- Added missing Fl_Window::copy_label() method.
